fix user-service for tg
